--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+      >
 
 
         <fragment
@@ -22,7 +22,8 @@
             android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/grey"
+            android:background="@drawable/bottom_navigation_background"
+
             app:layout_constraintBottom_toBottomOf="@id/nav_host_fragment"
             app:menu="@menu/navigation"
 
