--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/full_dashboard_background"
+    android:background="@color/colorPrimaryDark"
     tools:context=".splashscreen.MainActivity">
 
 
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textColor="@color/grey"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
