--- a/app/src/main/res/layout/global_fragment.xml
+++ b/app/src/main/res/layout/global_fragment.xml
@@ -37,6 +37,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/today"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <!--<TextView
@@ -77,8 +78,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/affected"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                       style="@style/CardTextTitleStyle"/>
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -95,8 +95,8 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                       style="@style/CardTextBigTitleStyle"
+                        />
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
@@ -123,8 +123,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/deaths"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -141,8 +140,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
@@ -174,8 +172,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/recovered"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -192,8 +189,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -219,8 +215,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/active"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -237,8 +232,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -264,8 +258,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/serious"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -282,8 +275,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
