--- a/app/src/main/res/layout/mycountry_fragment.xml
+++ b/app/src/main/res/layout/mycountry_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/full_dashboard_background">
@@ -37,6 +36,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/today"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <!--<TextView
@@ -77,8 +77,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/affected"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -95,8 +94,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
@@ -123,8 +121,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/deaths"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -141,8 +138,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
@@ -174,8 +170,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/recovered"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -192,8 +187,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -219,8 +213,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/active"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -237,8 +230,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -264,8 +256,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_margin="5dp"
                         android:text="@string/serious"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextTitleStyle" />
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_launcher_foreground"
@@ -282,8 +273,7 @@
                         android:layout_margin="5dp"
                         android:layout_marginStart="10dp"
                         android:text="..."
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        style="@style/CardTextBigTitleStyle" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
