--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/full_dashboard_background">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
-            app:layout_constraintTop_toTopOf="parent">
+            android:background="@drawable/full_dashboard_background"
+            android:layout_marginBottom="@dimen/_30sdp">
 
-            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -25,9 +20,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_alignParentTop="true">
 
                     <TextView
                         android:id="@+id/pagetitle"
@@ -45,26 +38,24 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:layout_below="@id/activity_title"
                     android:id="@+id/layout_tablayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/activity_title">
+                    >
 
                     <com.ogaclejapan.smarttablayout.SmartTabLayout
                         android:id="@+id/tl_main_statistics"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_48sdp"
+                        android:layout_width="377dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginEnd="20dp"
                         android:background="@drawable/tablayout_background"
                         android:clipToPadding="false"
                         android:paddingLeft="@dimen/_12sdp"
                         android:paddingRight="@dimen/_12sdp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:stl_defaultTabTextColor="@color/white"
                         app:stl_defaultTabTextHorizontalPadding="14dp"
                         app:stl_defaultTabTextSize="@dimen/_10ssp"
@@ -86,23 +77,27 @@
                         android:layout_width="match_parent"
                         android:layout_height="260dp"
                         android:layout_below="@id/tl_main_statistics"
-                        android:layout_marginTop="5dp" />
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"/>
                 </RelativeLayout>
 
                 <LinearLayout
+                    android:layout_height="wrap_content"
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_60sdp"
+                    android:layout_below="@id/layout_tablayout"
+                    android:layout_marginTop="50dp"
                     android:background="@drawable/half_dashboard_background">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginTop="10dp"
-                        tools:ignore="UselessParent">
+                        android:layout_marginBottom="@dimen/_20sdp"
+                        >
 
                         <TextView
                             android:id="@+id/chart_title"
@@ -133,7 +128,7 @@
                                 <com.github.mikephil.charting.charts.BarChart
                                     android:id="@+id/bar_chart_covid_data_analysis"
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/_185sdp"
+                                    android:layout_height="@dimen/_150sdp"
                                     android:layout_marginTop="@dimen/_10sdp"
                                     android:layout_marginBottom="@dimen/_10sdp" />
 
@@ -150,10 +145,10 @@
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
         </ScrollView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
 
 
