--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home_foreground"
-        android:title="@string/home" />
+        android:title="@string/home"
+        />
     <item
         android:id="@+id/statisticsFragment"
         android:icon="@drawable/ic_statistics_foreground"
