--- a/app/src/main/res/layout/global_fragment.xml
+++ b/app/src/main/res/layout/global_fragment.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
+    <data>
+        <import type="android.view.View" />
+
+        <variable
+            name="loading"
+            type="java.lang.Boolean" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/tools"
