--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:background="@drawable/full_dashboard_background"
-            android:layout_marginBottom="@dimen/_30sdp">
+    <data>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+        <import type="android.view.View" />
+
+        <variable
+            name="loading"
+            type="java.lang.Boolean" />
+    </data>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/_30sdp"
+        android:background="@drawable/full_dashboard_background"
+        android:scrollbars="none">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -132,12 +142,12 @@
                                     android:layout_marginTop="@dimen/_10sdp"
                                     android:layout_marginBottom="@dimen/_10sdp" />
 
-                                <ProgressBar
+                                <!--<ProgressBar
                                     android:id="@+id/progress"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerInParent="true"
-                                    tools:visibility="visible" />
+                                    tools:visibility="visible" />-->
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
 
