--- a/app/src/main/res/drawable/red_background.xml
+++ b/app/src/main/res/drawable/red_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/red" />
+    <solid android:color="@color/themeRed" />
     <padding
         android:bottom="2dp"
         android:left="2dp"
