--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,20 +12,36 @@
     <style name="TextviewTitleStyle">
         <item name="android:textColor">#000</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/_18ssp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/open_sans_bold</item>
+    </style>
 
+    <style name="TextviewTitleStyleWhite">
+        <item name="android:textColor">#FFF</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/open_sans_bold</item>
     </style>
 
     <style name="CardTextTitleStyle">
         <item name="android:textColor">#FFF</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">10sp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/open_sans_light</item>
+    </style>
+
+    <style name="CardTextTitleStyleBlack">
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/open_sans_light</item>
     </style>
 
     <style name="CardTextBigTitleStyle">
         <item name="android:textColor">#FFF</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/open_sans_light</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
