--- a/app/src/main/res/layout/clean_hands_dialog.xml
+++ b/app/src/main/res/layout/clean_hands_dialog.xml
@@ -41,20 +41,36 @@
             </RelativeLayout>
 
 
-        <RelativeLayout
-            app:layout_constraintTop_toBottomOf="@id/layout_cleans_hands"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/layout_cleans_hands">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/wash_hand_header"/>
+                android:layout_marginBottom="20dp">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/img_clean_hands"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/wash_hand_header" />
 
+                <TextView
+                    content="@{content}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/img_clean_hands"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp" />
+
+            </RelativeLayout>
+
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
