--- a/app/src/main/res/layout/face_mask_dialog.xml
+++ b/app/src/main/res/layout/face_mask_dialog.xml
@@ -37,26 +37,37 @@
 
             </RelativeLayout>
 
-        <RelativeLayout
+
+        <ScrollView
             app:layout_constraintTop_toBottomOf="@id/layout_wear_mask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/img_wear_mask"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/wear_mask_header"/>
+                android:layout_marginBottom="20dp">
 
-            <TextView
-                android:layout_below="@id/img_wear_mask"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                text="{content}"/>
+                <ImageView
+                    android:id="@+id/img_wear_mask"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/wear_mask_header" />
 
-        </RelativeLayout>
+                <TextView
+                    content="@{content}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/img_wear_mask"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp" />
+
+            </RelativeLayout>
+
+        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
