--- a/app/src/main/res/layout/clean_hands_dialog.xml
+++ b/app/src/main/res/layout/clean_hands_dialog.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/close_clean_hands"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     style="@style/TextviewTitleStyleWhite"
@@ -36,6 +37,7 @@
                     android:contentDescription="@string/todo"
                     android:drawableStart="@drawable/ic_close_foreground"
                     android:gravity="center"
+                    android:textAlignment="viewStart"
                     android:text="Clean Your Hands" />
 
             </RelativeLayout>
@@ -61,6 +63,7 @@
                     android:src="@drawable/wash_hand_header" />
 
                 <TextView
+                    android:id="@+id/txt_content"
                     content="@{content}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -68,6 +71,13 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp" />
 
+                <TextView
+                    content="@{citation}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txt_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp" />
             </RelativeLayout>
 
         </ScrollView>
