--- a/app/src/main/res/layout/close_contact_dialog.xml
+++ b/app/src/main/res/layout/close_contact_dialog.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/close_close_contact"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     style="@style/TextviewTitleStyleWhite"
@@ -34,6 +35,7 @@
                     android:contentDescription="@string/todo"
                     android:drawableStart="@drawable/ic_close_foreground"
                     android:gravity="center"
+                    android:textAlignment="viewStart"
                     android:text="Avoid Close Contact" />
 
             </RelativeLayout>
@@ -60,10 +62,19 @@
                     android:src="@drawable/social_distancing_header" />
 
                 <TextView
+                    android:id="@+id/txt_content"
                     content="@{content}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/img_social_distancing"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp" />
+
+                <TextView
+                    content="@{citation}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txt_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp" />
 
