--- a/app/src/main/res/layout/face_mask_dialog.xml
+++ b/app/src/main/res/layout/face_mask_dialog.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/close_face_masks"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     style="@style/TextviewTitleStyleWhite"
@@ -33,6 +34,7 @@
                     android:contentDescription="@string/todo"
                     android:drawableStart="@drawable/ic_close_foreground"
                     android:gravity="center"
+                    android:textAlignment="viewStart"
                     android:text="Wear a Face Mask" />
 
             </RelativeLayout>
@@ -46,7 +48,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="0dp">
 
                 <ImageView
                     android:id="@+id/img_wear_mask"
@@ -58,12 +60,22 @@
                     android:src="@drawable/wear_mask_header" />
 
                 <TextView
+                    android:id="@+id/txt_content"
                     content="@{content}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/img_wear_mask"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp" />
+
+                <TextView
+                    content="@{citation}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txt_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="0dp"/>
 
             </RelativeLayout>
 
