Added Dialogs for Prevention Information

--- a/app/src/main/res/layout/face_mask_dialog.xml
+++ b/app/src/main/res/layout/face_mask_dialog.xml
@@ -48,7 +48,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp">
+                >
 
                 <ImageView
                     android:id="@+id/img_wear_mask"
@@ -74,8 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/txt_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="0dp"/>
+                    android:layout_marginEnd="20dp" />
 
             </RelativeLayout>
 
