Added Dialogs for Prevention Information

--- a/app/src/main/res/layout/close_contact_dialog.xml
+++ b/app/src/main/res/layout/close_contact_dialog.xml
@@ -42,6 +42,7 @@
 
 
         <ScrollView
+            android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/layout_close_contact">
